--- a/_posts/2016-11-23-firstDay.md
+++ b/_posts/2016-11-23-firstDay.md
@@ -9,3 +9,9 @@ tags:
   - 博客
   - 心情
 ---
+<img src="{{ site.url }}/images/she.jpg" alt="my girlfriend">
+<center><b>xyj</b> 是一个18岁的女孩, 十分的强悍.</center><br>
+
+## 心情
+今天的天气十分的寒冷，比起昨天又下降了好多度，不过今天也十分的开心，因为我写了我在**github**
+写了我的第一天博客 ！哈哈！。
