--- a/_posts/2016-11-23-firstDay.md
+++ b/_posts/2016-11-23-firstDay.md
@@ -9,7 +9,7 @@ tags:
   - 博客
   - 心情
 ---
-<img src="{{ site.url }}/images/she.jpg" alt="my girlfriend">
+<img src="{{ site.url }}/images/she.jpg" alt="my girlfriend"><br>
 <b>xyj</b> 是一个18岁的女孩，甜美可人，温柔富有亲和力，贤惠而不骄，优秀而不馁。<br>
 
 ## 心情
