--- a/_posts/2016-12-21-comonJs.md
+++ b/_posts/2016-12-21-comonJs.md
@@ -1,9 +1,10 @@
 ---
+layout: post
 title: CommonJS规范
-layout: page
 category: nodejs
-date: 2013-06-04
-modifiedOn: 2013-08-13
+tags:
+  - CommonJS
+ 
 ---
 
 ## 概述
