--- a/_posts/2017-1-7-node01.md
+++ b/_posts/2017-1-7-node01.md
@@ -21,3 +21,8 @@ tags:
 13. chrome v8引擎 最大特点就是单线程运行，一次只能运行一个任务。
 14. 如果定义函数有回调函数，一帮回调函数放在后面。方便可选。
 15. 线程主要是来执行代码的，进程主要是来运行这个代码程序。
+16. const es6语法 常量 不允许重新赋值。如果是一个对象，对象里面的东西可以赋值。
+17. let 定义局部变量
+18. ${ddd}模板字符串
+19. node的执行完全是单线程，不停的调返 实现异步操作，其中阻塞开辟一个进程，非阻塞遇到就先执行。
+<img src="{{ site.url }}/images/node.png"><br>
