--- a/_posts/2017-1-8-node02.md
+++ b/_posts/2017-1-8-node02.md
@@ -11,10 +11,12 @@ tags:
 3. node命令行中用空格隔开参数。
 4. node 定义模块 遵循common.js
 ##模块开发流程
- 1.创建模块（new calc.js）
- 2.导出成员（module.exports={}）
- 3.载入模块（var cacl=require('./calc.js')）
- 4.使用模块（calc.add(1,2)）
+<ul>
+<li>1.创建模块（new calc.js）</li>
+<li> 2.导出成员（module.exports={}）</li>
+<li> 3.载入模块（var cacl=require('./calc.js')）</li>
+<li> 4.使用模块（calc.add(1,2)）</li>
+</ul>
 6. __dirname 获取当前脚本所在路径 __dirfilname 文件路径 
 7. 所有的文件操作都必须是绝对路径（物理路径）；
 8. 每个模块的内部都是私有空间（私有作用域）；
