--- a/_posts/2017-1-8-node02.md
+++ b/_posts/2017-1-8-node02.md
@@ -17,7 +17,7 @@ tags:
 <li> 3.载入模块（var cacl=require('./calc.js')）</li>
 <li> 4.使用模块（calc.add(1,2)）</li>
 </ul>
-6. __dirname 获取当前脚本所在路径 __dirfilname 文件路径 
+6. __dirname 获取当前脚本所在路径 __filname 文件路径 
 7. 所有的文件操作都必须是绝对路径（物理路径）；
 8. 每个模块的内部都是私有空间（私有作用域）；
 9. module是一个对象，可以console.log（）出来。
@@ -37,6 +37,13 @@ tags:
     
     </code></pre>
 
-18.
-19.
+18. 如果每次想执行模块中的方法，应该把属性写成方法。列入：
+   ```javascript
+        module.exports=()=>{
+          
+          return new Date();
+        }
+        
+    
+   ```
 
