--- a/_posts/2017-1-9-node03.md
+++ b/_posts/2017-1-9-node03.md
@@ -384,9 +384,9 @@ setInterval(() => {
 - fs.existsSync(path) // => 返回布尔类型 exists
 
 #### 获取文件信息
+- fs.statSync(path) // => 返回一个fs.Stats实例
 
 - fs.stat(path,callback(err,stats))
-- fs.statSync(path) // => 返回一个fs.Stats实例
 
 #### 移动文件或重命名文件或目录
 
@@ -513,7 +513,7 @@ fs.readFile(path.join(__dirname, './markdown.css'), 'utf8', (error, css) => {
 *****
 
 ## 文件流
-
+1. 包iconv-lite文件编码解决。
 
 
 
